--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 
+spring.application.name=DemoApplication
+
+logging.level.org.springframework=error
+logging.level.org.springframework.boot.web.embedded.tomcat=INFO
